--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "scripts": {
     "dev": "vite",
-    "start": "node server.js",
+    "start": "node server.cjs",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
